/**
 * @fileoverview Tests individual stages of the color processing pipeline in isolation.
 *
 * This test file validates each stage of the color generation pipeline separately,
 * using snapshots to detect regressions. Each stage is tested independently to
 * ensure that changes in one stage don't affect the testing of other stages.
 *
 * Pipeline stages tested:
 * 1. Theme Definition - Validates theme color structure and OKLCH format
 * 2. Dark Mode Adjustments - Ensures dark mode overrides are correctly applied
 * 3. CSS Variable Generation - Verifies CSS custom property generation
 * 4. Theme-Aware Variables - Tests theme-specific CSS variable mappings
 * 5. Gradient Configurations - Validates gradient utility definitions
 * 6. Utility Class Patterns - Tests utility class generation patterns
 * 7. Complete Theme System - Validates the entire integrated system
 *
 * @example
 * // To run these tests:
 * pnpm test color-pipeline-stages
 *
 * // To update snapshots after intentional changes:
 * pnpm test color-pipeline-stages -- -u
 *
 * @see {@link ../constants.ts} - Source of theme definitions and constants
 * @see {@link ../schema.ts} - Validation schemas for themes and colors
 * @see {@link compatibility-side-effects.test.ts} - Runtime color transformations
 * @see {@link browser-fallback-generation.test.ts} - CSS output and browser compatibility
 */
import { describe, expect, it } from 'vitest'
import { COLOR_KEYS, DARK_MODE_ADJUSTMENTS, THEME_DEFINITIONS, THEME_NAMES } from '../constants'
import { validateDarkModeAdjustments, validateThemes } from '../schema'

describe('Theme Processing Lifecycle Snapshots', () => {
  describe('Stage 1: Theme Definition', () => {
    it('defines and validates theme colors', () => {
      // Use actual theme definitions from constants
      const validatedThemes = validateThemes(THEME_DEFINITIONS)

      // Snapshot the theme structure
      expect(validatedThemes).toMatchSnapshot('1-theme-definitions')
    })
  })

  describe('Stage 2: Dark Mode Adjustments', () => {
    it('defines dark mode color overrides', () => {
      // Use actual dark mode adjustments from constants
      const validatedAdjustments = validateDarkModeAdjustments(DARK_MODE_ADJUSTMENTS)

      expect(validatedAdjustments).toMatchSnapshot('2-dark-mode-adjustments')
    })
  })

  describe('Stage 3: CSS Variable Generation', () => {
    it('generates CSS variables for all themes', () => {
      // Use actual theme definitions
      const themes = validateThemes(THEME_DEFINITIONS)

      // Generate CSS variables
      const cssVariables: Record<string, string> = {}

      for (const [themeName, colors] of Object.entries(themes)) {
        for (const [colorName, colorValue] of Object.entries(colors)) {
          cssVariables[`--color-${themeName}-${colorName}`] = colorValue
        }
      }

      // Format for snapshot
      const formattedVariables = Object.entries(cssVariables)
        .map(([key, value]) => `${key}: ${value}`)
        .join(';\n  ')

      expect(formattedVariables).toMatchSnapshot('3-css-variables')
    })
  })

  describe('Stage 4: Theme-Aware Variables', () => {
    it('generates theme-aware CSS variable mappings', () => {
      // Use constants for theme names and color keys
      const themeNames = THEME_NAMES
      const colorKeys = COLOR_KEYS

      // Generate theme-aware mappings
      const themeMappings: Record<string, Record<string, string>> = {}

      for (const themeName of themeNames) {
        themeMappings[themeName] = {}
        for (const colorKey of colorKeys) {
          themeMappings[themeName][`--theme-${colorKey}`] = `var(--color-${themeName}-${colorKey})`
        }
      }

      expect(themeMappings).toMatchSnapshot('4-theme-aware-mappings')
    })
  })

  describe('Stage 5: Gradient Configurations', () => {
    it('defines gradient utility configurations', () => {
      const gradientConfigs = {
        'bottom-primary-secondary': {
          colors: ['primary', 'secondary'],
          direction: 'to bottom',
        },
        'br-primary-secondary': {
          colors: ['primary', 'secondary'],
          direction: 'to bottom right',
        },
        'radial-accent-primary': {
          colors: ['accent', 'primary'],
          direction: 'circle at center',
          type: 'radial',
        },
        'right-primary-accent': {
          colors: ['primary', 'accent'],
          direction: 'to right',
        },
        'right-primary-secondary': {
          colors: ['primary', 'secondary'],
          direction: 'to right',
        },
        'right-secondary-accent': {
          colors: ['secondary', 'accent'],
          direction: 'to right',
        },
        'tr-primary-secondary': {
          colors: ['primary', 'secondary'],
          direction: 'to top right',
        },
      }

      expect(gradientConfigs).toMatchSnapshot('5-gradient-configurations')
    })
  })

  describe('Stage 6: Utility Class Patterns', () => {
    it('defines utility class patterns with modifiers', () => {
      const utilityPatterns = {
        colorUtilities: {
          bg: ['primary', 'secondary', 'accent', 'background'],
          border: ['primary', 'secondary', 'accent'],
          ring: ['primary', 'secondary', 'accent'],
          text: ['primary', 'secondary', 'accent', 'background', 'text'],
        },
        opacityModifiers: [10, 20, 30, 40, 50, 60, 70, 80, 90],
        stateVariants: {
          active: ['bg'],
          focus: ['ring', 'border'],
          hover: ['text', 'bg', 'border'],
        },
      }

      expect(utilityPatterns).toMatchSnapshot('6-utility-patterns')
    })
  })

  describe('Stage 7: Complete Theme System', () => {
    it('shows complete theme system structure', () => {
      const completeSystem = {
        colorSlots: COLOR_KEYS,
        cssArchitecture: {
          darkModeSelectors: 'Dark mode overrides',
          rootVariables: 'All theme color definitions',
          themeSelectors: 'Theme-specific variable mappings',
          utilityClasses: 'Theme-aware utilities',
        },
        features: {
          darkMode: true,
          gradients: true,
          opacityVariants: true,
        },
        themes: THEME_NAMES,
        usageExample: {
          classes: 'bg-theme-primary text-white hover:bg-theme-primary/80',
          html: '<div data-theme="emerald" data-theme-mode="dark">',
        },
      }

      expect(completeSystem).toMatchSnapshot('7-complete-system')
    })
  })

  describe('Edge Cases and Validation', () => {
    it('handles invalid OKLCH values', () => {
      const invalidCases = [
        { input: 'oklch(1.5 0.2 160)', issue: 'lightness > 1' },
        { input: 'oklch(0.5 -0.1 160)', issue: 'negative chroma' },
        { input: 'oklch(0.5 0.2 -30)', issue: 'negative hue' },
        { input: 'oklch(0.5 0.2 400)', issue: 'hue > 360' },
        { input: 'rgb(255, 0, 0)', issue: 'wrong color format' },
        { input: 'oklch(0.5 0.2)', issue: 'missing hue' },
      ]

      const validationResults = invalidCases.map(({ input, issue }) => {
        try {
          validateThemes({
            test: {
              accent: 'oklch(0.8 0.15 160)',
              background: 'oklch(0.97 0.03 160)',
              primary: input,
              secondary: 'oklch(0.7 0.18 160)',
              text: 'oklch(0.3 0.15 160)',
            },
          })
          return { input, issue, result: 'unexpectedly passed' }
        } catch (_error) {
          return { input, issue, result: 'correctly rejected' }
        }
      })

      expect(validationResults).toMatchSnapshot('edge-case-validation')
    })
  })
})
